Fixes contrast on published date

--- a/styles/_type.scss
+++ b/styles/_type.scss
@@ -74,7 +74,7 @@ button {
     &__date {
       color: $blue;
       font-size: .95rem;
-      opacity: .6;
+      opacity: .8;
     }
 
     &__hosts {
